Updated index page

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <h1>Hello Coursera AngularJs Students</h1>
+    <link href="https://github.com/jhu-ep-coursera/fullstack-course5/blob/master/FAQ.md">
   </body>
 </html>
